static/css/base.css
html {
    height: 100%;
}

body {
    font-family: 'Shippori Mincho B1', serif;
    height: 100%;
}

/* Adds padding to content to stop nav overlapping */
.nav-padding {
    padding-top: 150px;
}

/* Colours navbar */
nav a {
    color: black;
}

.navbar-style {
    background-color: #ebe9e9;
}

/* Sizes logo */
.logo-image {
    width: 160px;
}

.btn-outline-success {
    color: black;
    border-color: black;
}

.search-bar {
    border-color: #c6c6c7;
    border-width: 1px;
    border-radius: 0;
    margin: -1px;
}

/* The hero image */
.hero-image {
    background-image: url("/media/main.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    max-height: 100%;
    max-width:100%;
}

.hero-text {
    position: absolute;
    top: 40%;
    color: white;
}

.hero-title {
    font-size: 45px;
}

.home-nav-padding {
    padding-top: 70px;
}

.horizontal-dropdown {
    margin-top: 0;
    background-clip: border-box;
    background-color: #ebe9e9;
}

.horizontal-dropdown .dropdown-item {
    background-color: #ebe9e9;
}

.horizontal-dropdown a:hover {
    text-decoration: none;
    color: rgb(83, 75, 75);
}

/* from Bulma for icons*/
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.main-heading-padding {
    padding-bottom: 10px;
}

.product-box {
    border-style: solid;
    border-color: black;
    padding: 50px 60px;
    margin-bottom: 30px;
}

/* Button styling  */
.btn-black {
    background: black;
    color: white;
}

.btns {
    color: #ffffff !important;
    background: #000000;
    padding: 10px;
    display: inline-block;
    transition: all 0.3s ease 0s;
    font-size: 15px;
}

.btns:hover {
    border-radius: 50px;
    transition: all 0.3s ease 0s;
    text-decoration: none;
}

.up-btn {
    height: 35px;
    width: 35px;
    position: fixed;
    bottom: 10px;
    right: 5px;
    border-radius: 50%;
}

.upbtn-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.update-link {
    padding: 8px;
}

.help-btn-style {
    background-color: #d36060;
}

.footer-style {
    position: relative;
    padding: 0px 20px;
    background-color: #ebe9e9;
}

.social-icons {
    color: #000;
    font-size: 50px;
    padding-left: 10px;
}

/* bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.delivery-link a {
    color: rgba(0, 0, 0, 0.719);
    text-decoration: underline;
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

/* Tablet view */
@media (max-width: 1030px) {


    /* navbar links */
    nav a {
        font-size: 13px;
    }

    /* Sizes logo */
    .logo-image {
        width: 120px;
    }

    .home-nav-padding {
        padding-top: 90px;
    }

    .product-box {
        padding: 10px 10px;
    }

    .social-icons {
        padding-left: 10px;
    }

}

/* Mobile view */
@media (max-width: 550px) {

    /* Sizes logo */
    .logo-image {
        width: 80px;
    }

    .home-nav-padding {
        padding-top: 95px;
    }

    .product-box {
        padding: 20px 20px;
    }

    .social-icons {
        font-size: 40px;
        padding-left: 5px;
    }

    .help-btn-style {
        font-size: 10px;
    }

    .keep-shopping {
        padding-bottom: 10px;
    }

    .increment-qty, .decrement-qty {
        padding: 2px !important;
    }
}


@media (max-width: 285px) {
    /* Galaxy fold view */

    .social-icons {
        font-size: 30px;
    }

    .help-btn-style {
        font-size: 8px;
    }
}

